--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,10 +1,14 @@
 .home {
   display: grid;
   grid-template-columns: 3fr 1fr;
+  background-color: #fcfcfc;
 }
 .product-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
-  margin: 10px 5px 5px 50px;
+  margin: 10px 5px 20px 50px;
+}
+.cart-container {
+  margin-top: 20px;
 }
