--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,9 +1,37 @@
 .cart {
   text-align: center;
   margin-left: 5px;
-  box-shadow: 10px 5px 5px gray;
+  box-shadow: 10px 5px 5px rgb(167, 162, 162);
   padding: 20px;
   border: 1px solid lightgrey;
   color: #545454;
+  border-radius: 5px;
+}
+.cart-name {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.cart-img {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+  border-radius: 50%;
+  margin-bottom: 5px;
+}
+h5 a {
+  text-decoration: none;
+  color: white;
+  background-color: red;
+  padding: 5px;
+  margin-left: 10px;
+}
+button {
+  width: 200px;
+  height: 40px;
+  background-color: rgb(96, 96, 231);
+  color: white;
+  font-weight: 900;
+  border: none;
   border-radius: 5px;
 }
